force-app/main/default/objects/Feedback__c/Feedback__c.object-meta.xml
<CustomObject>
    <description>A place to log bugs, requests for improvements, ideas and report requests.</description>
    <label>Support</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Feedback ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>