force-app/main/default/objects/Feedback__c/fields/Allow_Chatter_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Allow_Chatter_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Chatter Notifications</label>
    <type>Checkbox</type>
</CustomField>