force-app/main/default/objects/Feedback__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accellor Improvements</fullName>
            </value>
            <value>
                <fullName>Ad-Hoc Portal request</fullName>
                <label>Ad-Hoc Portal Request</label>
            </value>
            <value>
                <fullName>Ad-Hoc Salesforce Request</fullName>
            </value>
            <value>
                <fullName>CS Consultancy</fullName>
            </value>
            <value>
                <fullName>CS Improvements</fullName>
            </value>
            <value>
                <fullName>Finance Improvements</fullName>
            </value>
            <value>
                <fullName>Major Project</fullName>
            </value>
            <value>
                <fullName>Operations Improvements</fullName>
            </value>
            <value>
                <fullName>Xpand Improvements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>