force-app/main/default/objects/Feedback__c/fields/Date_required__c.field-meta.xml
<CustomField>
    <fullName>Date_required__c</fullName>
    <inlineHelpText>When does this need to fixed by? E.g. before end of month invoicing.</inlineHelpText>
    <label>Date required</label>
    <type>Date</type>
</CustomField>