force-app/main/default/objects/Feedback__c/fields/Days_taken_to_complete__c.field-meta.xml
<CustomField>
    <fullName>Days_taken_to_complete__c</fullName>
    <formula>End_Date__c - Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days taken to complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>