force-app/main/default/objects/Feedback__c/fields/Error_message__c.field-meta.xml
<CustomField>
    <fullName>Error_message__c</fullName>
    <description>User will post error message in here to help with identifying the issues</description>
    <inlineHelpText>Copy and paste any error messages you have received in here.</inlineHelpText>
    <label>Error message (if applicable)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>