force-app/main/default/objects/Feedback__c/fields/Feedback_type__c.field-meta.xml
<CustomField>
    <fullName>Feedback_type__c</fullName>
    <label>Feedback type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional fields</fullName>
            </value>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Critical Update</fullName>
            </value>
            <value>
                <fullName>Data Fix - Known Issue</fullName>
            </value>
            <value>
                <fullName>Data Fix - New Issue</fullName>
            </value>
            <value>
                <fullName>Data Improvement</fullName>
            </value>
            <value>
                <fullName>Data load request</fullName>
            </value>
            <value>
                <fullName>Feature request</fullName>
            </value>
            <value>
                <fullName>Field Security and Page Layouts</fullName>
            </value>
            <value>
                <fullName>Improvement</fullName>
            </value>
            <value>
                <fullName>Jira Record</fullName>
            </value>
            <value>
                <fullName>Minor Request</fullName>
            </value>
            <value>
                <fullName>New Product</fullName>
            </value>
            <value>
                <fullName>Portal tokens</fullName>
            </value>
            <value>
                <fullName>Query</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
            <value>
                <fullName>Reports/Dashboard</fullName>
            </value>
            <value>
                <fullName>Security/Profile/User Settings</fullName>
            </value>
            <value>
                <fullName>Security Alert Update</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Validation Rule</fullName>
            </value>
            <value>
                <fullName>Feature added</fullName>
                <isActive>false</isActive>
                <label>Feature added</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>