force-app/main/default/objects/Feedback__c/fields/Is_complete__c.field-meta.xml
<CustomField>
    <fullName>Is_complete__c</fullName>
    <formula>OR(ISPICKVAL( Status__c , &apos;Completed&apos;), ISPICKVAL(Status__c, &apos;Closed no action required&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is solved?</label>
    <type>Checkbox</type>
</CustomField>