force-app/main/default/objects/Feedback__c/fields/Jira_Link__c.field-meta.xml
<CustomField>
    <fullName>Jira_Link__c</fullName>
    <label>Dev Ops/Jira Link</label>
    <type>Url</type>
</CustomField>