force-app/main/default/objects/Feedback__c/fields/Linked_Support_Issue__c.field-meta.xml
<CustomField>
    <fullName>Linked_Support_Issue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is used to tag known support tickets that have not been dealt with.</inlineHelpText>
    <label>Linked Support Issue</label>
    <referenceTo>Feedback__c</referenceTo>
    <relationshipLabel>Support</relationshipLabel>
    <relationshipName>Support</relationshipName>
    <type>Lookup</type>
</CustomField>