force-app/main/default/objects/Feedback__c/fields/Platform_type__c.field-meta.xml
<CustomField>
    <fullName>Platform_type__c</fullName>
    <label>Platform type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Azure</fullName>
            </value>
            <value>
                <fullName>Customer portal</fullName>
            </value>
            <value>
                <fullName>Detrack</fullName>
            </value>
            <value>
                <fullName>Drivers App</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
                <default>true</default>
                <label>Salesforce</label>
            </value>
            <value>
                <fullName>Sendgrid</fullName>
            </value>
            <value>
                <fullName>Supplier App</fullName>
            </value>
            <value>
                <fullName>Enqix</fullName>
                <isActive>false</isActive>
                <label>Enqix</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>