force-app/main/default/objects/Feedback__c/fields/Priority_level__c.field-meta.xml
<CustomField>
    <fullName>Priority_level__c</fullName>
    <inlineHelpText>Anything that is causing direct problems to the business should be high, any nice to haves and ideas should be low.</inlineHelpText>
    <label>Priority level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>