force-app/main/default/objects/Feedback__c/fields/Project_Length__c.field-meta.xml
<CustomField>
    <fullName>Project_Length__c</fullName>
    <label>Project Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quick:  Less than a day</fullName>
                <default>true</default>
                <label>Quick:  Less than a day</label>
            </value>
            <value>
                <fullName>Quick:  1 - 2 days</fullName>
            </value>
            <value>
                <fullName>Medium:  3 - 5 days</fullName>
            </value>
            <value>
                <fullName>Medium:  5 - 10 days</fullName>
            </value>
            <value>
                <fullName>Long Term:  10+ days</fullName>
            </value>
            <value>
                <fullName>Medium: 3 - 5 days</fullName>
                <isActive>false</isActive>
                <label>Medium: 3 - 5 days</label>
            </value>
            <value>
                <fullName>Medium: 5 - 10 days</fullName>
                <isActive>false</isActive>
                <label>Medium: 5 - 10 days</label>
            </value>
            <value>
                <fullName>Quick: 1 - 2 days</fullName>
                <isActive>false</isActive>
                <label>Quick: 1 - 2 days</label>
            </value>
            <value>
                <fullName>Quick: Less than a day</fullName>
                <isActive>false</isActive>
                <label>Quick: Less than a day</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>