force-app/main/default/objects/Feedback__c/fields/Project_Size__c.field-meta.xml
<CustomField>
    <fullName>Project_Size__c</fullName>
    <label>Project Difficulty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
                <default>true</default>
                <label>Small</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>X-Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>