force-app/main/default/objects/Feedback__c/fields/Salesforce_example_link__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_example_link__c</fullName>
    <inlineHelpText>Copy and paste a URL linking to the example referred to.</inlineHelpText>
    <label>Salesforce example link</label>
    <type>Url</type>
</CustomField>