force-app/main/default/objects/Feedback__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>This will be updated when the feedback submission is worked on and completed.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To be reviewed</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Triaged</fullName>
            </value>
            <value>
                <fullName>More Detail Required</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>With Popcorn</fullName>
                <label>With Developers</label>
            </value>
            <value>
                <fullName>Testing required</fullName>
                <label>Testing</label>
            </value>
            <value>
                <fullName>Closed no action required</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Dismissed</fullName>
                <isActive>false</isActive>
                <label>Dismissed</label>
            </value>
            <value>
                <fullName>Doing</fullName>
                <isActive>false</isActive>
                <label>Doing</label>
            </value>
            <value>
                <fullName>Done</fullName>
                <isActive>false</isActive>
                <label>Done</label>
            </value>
            <value>
                <fullName>On hold</fullName>
                <isActive>false</isActive>
                <label>On hold</label>
            </value>
            <value>
                <fullName>On hold - known issue</fullName>
                <isActive>false</isActive>
                <label>On hold - known issue</label>
            </value>
            <value>
                <fullName>On hold low priority</fullName>
                <isActive>false</isActive>
                <label>On hold low priority</label>
            </value>
            <value>
                <fullName>On hold waiting for feedback</fullName>
                <isActive>false</isActive>
                <label>On hold waiting for feedback</label>
            </value>
            <value>
                <fullName>On hold with 3rd Party</fullName>
                <isActive>false</isActive>
                <label>On hold with 3rd Party</label>
            </value>
            <value>
                <fullName>Pending feature request</fullName>
                <isActive>false</isActive>
                <label>Pending feature request</label>
            </value>
            <value>
                <fullName>Waiting for code freeze to end</fullName>
                <isActive>false</isActive>
                <label>Waiting for code freeze to end</label>
            </value>
            <value>
                <fullName>Waiting for the next release</fullName>
                <isActive>false</isActive>
                <label>Waiting for the next release</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>