force-app/main/default/objects/Feedback__c/fields/Supporting_Team__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Team__c</fullName>
    <label>Supporting Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accellor</fullName>
            </value>
            <value>
                <fullName>Xpand</fullName>
            </value>
            <value>
                <fullName>Equator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>