force-app/main/default/objects/Feedback__c/fields/User_is_active__c.field-meta.xml
<CustomField>
    <fullName>User_is_active__c</fullName>
    <formula>Owner:User.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User is active</label>
    <type>Checkbox</type>
</CustomField>