force-app/main/default/objects/Feedback__c/listViews/Created_last_week.listView-meta.xml
<ListView>
    <fullName>Created_last_week</fullName>
    <columns>NAME</columns>
    <columns>Requested_by__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Platform_type__c</columns>
    <columns>Feedback_type__c</columns>
    <columns>Description__c</columns>
    <columns>Project_Size__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_WEEK</value>
    </filters>
    <label>Created last week</label>
</ListView>