force-app/main/default/objects/Feedback__c/listViews/New_features.listView-meta.xml
<ListView>
    <fullName>New_features</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Requested_by__c</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <columns>Salesforce_example_link__c</columns>
    <columns>Jira_Link__c</columns>
    <columns>Priority_level__c</columns>
    <columns>Project_Length__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Done,Dismissed</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>Feedback_type__c</field>
        <operation>equals</operation>
        <value>Feature request</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>9/1/2021 12:00 AM</value>
    </filters>
    <label>New features!</label>
</ListView>