force-app/main/default/objects/Feedback__c/listViews/Outstanding_by_Department.listView-meta.xml
<ListView>
    <fullName>Outstanding_by_Department</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Requested_by__c</columns>
    <columns>Status__c</columns>
    <columns>Date_required__c</columns>
    <columns>Feedback_type__c</columns>
    <columns>Description__c</columns>
    <columns>Priority_level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>9/1/2021 12:00 AM</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>To be reviewed,In progress,Testing required,Waiting for the next release</value>
    </filters>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
        <value>Customer Service,Account Manager,Account Management,Business Development</value>
    </filters>
    <filters>
        <field>Requested_by__c</field>
        <operation>equals</operation>
        <value>Joe Allen,Sara Shearly,Sam Plumb,Kiara Clarke</value>
    </filters>
    <label>Outstanding by customer facing team</label>
</ListView>