force-app/main/default/objects/Feedback__c/listViews/Pending_Feature_Requests.listView-meta.xml
<ListView>
    <fullName>Pending_Feature_Requests</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Feedback_type__c</columns>
    <columns>NAME</columns>
    <columns>Requested_by__c</columns>
    <columns>Status__c</columns>
    <columns>Priority_level__c</columns>
    <columns>Platform_type__c</columns>
    <columns>Description__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>9/20/2021 12:00 AM</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending feature request</value>
    </filters>
    <label>Pending Feature Requests</label>
</ListView>