force-app/main/default/objects/Feedback__c/listViews/Pending_Requests.listView-meta.xml
<ListView>
    <fullName>Pending_Requests</fullName>
    <columns>NAME</columns>
    <columns>Requested_by__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Date_required__c</columns>
    <columns>Platform_type__c</columns>
    <columns>Feedback_type__c</columns>
    <columns>Priority_level__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2021 12:00 AM</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>To be reviewed,In progress,Closed no action required,Completed</value>
    </filters>
    <label>Pending Requests</label>
</ListView>