force-app/main/default/objects/Feedback__c/listViews/Solved.listView-meta.xml
<ListView>
    <fullName>Solved</fullName>
    <booleanFilter>3 AND (1 OR 2)</booleanFilter>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Feedback_type__c</columns>
    <columns>Description__c</columns>
    <columns>Priority_level__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Done</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>5/1/2023 12:00 AM</value>
    </filters>
    <label>Completed</label>
</ListView>