force-app/main/default/objects/Feedback__c/listViews/To_do_all.listView-meta.xml
<ListView>
    <fullName>To_do_all</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Requested_by__c</columns>
    <columns>Status__c</columns>
    <columns>Date_required__c</columns>
    <columns>Feedback_type__c</columns>
    <columns>Description__c</columns>
    <columns>Priority_level__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Department__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>9/1/2021 12:00 AM</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>To be reviewed,In progress,On hold with 3rd Party,Testing required</value>
    </filters>
    <label>Outstanding</label>
</ListView>